[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.38.0"
axum = "0.7.5"
serde_json = "1.0.120"
dotenv = "0.15.0"
two-sided-marketplace-for-services = { path = "../../program/programs/two-sided-marketplace-for-services", features = ["no-entrypoint"] }
solana-client = "1.18.12"
solana-cli-config = "1.18.12"
solana-clap-utils = "1.18.12"
solana-sdk = "1.18.12"
borsh = {version = "1.5.0", features = ["derive"]}
spl-associated-token-account = "3.0.4"