[package]
name = "two-sided-marketplace-for-services"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "two_sided_marketplace_for_services"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed", "interface-instructions", "allow-missing-optionals"] }
anchor-spl = "0.30.1"
mpl-core = { version = "0.7.2", features = [ "anchor" ] }